upgrade vproxy-runtime image to jdk-21