@@ -1,4 +1,4 @@
 #!/bin/bash
 set -e
 
-exec java --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -XX:+CriticalJNINatives -Djava.library.path=/usr/lib/`uname -m`-linux-gnu $@
+exec java --enable-preview --enable-native-access=ALL-UNNAMED --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -Djava.library.path="/usr/lib/`uname -m`-linux-gnu:/" $@
